# analog-cim-sim

./: .clang-format  .gitignore  .gitmodules  README.md  pyproject.toml  requirements.txt  setup.cfg
.devcontainer/: Dockerfile  post_create.sh
.github/workflows/: build_interfaces.yml  cmake.yml  coverage.yml  python.yml  style.yml
cpp/: CMakeLists.txt
cpp/inc/: global_vars.h  interface_xbar.h
cpp/inc/adc/: adc.h  adcfactory.h  infadc.h  posadc.h  symadc.h
cpp/inc/helper/: config.h  definitions.h  functions.h  histogram.h
cpp/inc/mapping/: crossbar_mapping.h  mapper.h  mapperA.h  mapperB.h  mapperC.h  mapperD.h  mapperE.h
cpp/inc/mapping/bnn_mapper/: bnn_i.h  bnn_ii.h  bnn_iii.h  bnn_iv.h  bnn_v.h  bnn_vi.h
cpp/inc/mapping/int_mapper/: int_i.h  int_ii.h  int_iii.h  int_iv.h  int_v.h
cpp/inc/mapping/tnn_mapper/: tnn_i.h  tnn_ii.h  tnn_iii.h  tnn_iv.h  tnn_v.h
cpp/inc/xbar/: adc.h  analog_crossbar.h  crossbar.h  digital_crossbar.h  parasitics.h  read_disturb.h
cpp/src/: interface_bnn_tnn.cpp  interface_cb.cpp  interface_int.cpp  interface_pybind.cpp  interface_xbar.cpp
cpp/src/adc/: adc.cpp  adcfactory.cpp  infadc.cpp  posadc.cpp  symadc.cpp
cpp/src/helper/: config.cpp  functions.cpp  histogram.cpp
cpp/src/mapping/: crossbar_mapping.cpp  mapper.cpp  mapperA.cpp  mapperB.cpp  mapperC.cpp  mapperD.cpp  mapperE.cpp
cpp/src/mapping/bnn_mapper/: bnn_i.cpp  bnn_ii.cpp  bnn_iii.cpp  bnn_iv.cpp  bnn_v.cpp  bnn_vi.cpp
cpp/src/mapping/int_mapper/: int_i.cpp  int_ii.cpp  int_iii.cpp  int_iv.cpp  int_v.cpp
cpp/src/mapping/tnn_mapper/: tnn_i.cpp  tnn_ii.cpp  tnn_iii.cpp  tnn_iv.cpp  tnn_v.cpp
cpp/src/xbar/: adc.cpp  analog_crossbar.cpp  crossbar.cpp  digital_crossbar.cpp  parasitics.cpp  read_disturb.cpp
cpp/test/: CMakeLists.txt
cpp/test/lib/: adc_tests.cpp  bnn_tnn_tests.cpp  config_tests.cpp  int_tests.cpp  lib_cb_emu_tests.cpp  load_library.cpp  load_library_tests.cpp  mvm_tests.cpp  parasitics_tests.cpp  var_tests.cpp
cpp/test/lib/configs/: config.json
cpp/test/lib/configs/analog/: BNN_I.json  BNN_II.json  BNN_III.json  BNN_IV.json  BNN_V.json  BNN_VI.json  I_DIFF_W_DIFF_1XB.json  I_DIFF_W_DIFF_2XB.json  I_OFFS_W_DIFF.json  I_TC_W_DIFF.json  I_UINT_W_DIFF.json  I_UINT_W_OFFS.json  POS_ADC_1.json  READ_DISTURB.json  READ_DISTURB_MITIGATION.json  READ_DISTURB_MITIGATION_HW.json  READ_DISTURB_MITIGATION_SW.json  SYM_ADC_1.json  SYM_ADC_2.json  SYM_ADC_3.json  SYM_ADC_4.json  TNN_I.json  TNN_II.json  TNN_III.json  TNN_IV_split.json  TNN_V_split.json
cpp/test/lib/configs/digital/: BNN_II.json  BNN_III.json  BNN_IV.json  BNN_V.json  BNN_VI.json  I_DIFF_W_DIFF_1XB.json  I_DIFF_W_DIFF_2XB.json  I_OFFS_W_DIFF.json  I_TC_W_DIFF.json  I_UINT_W_DIFF.json  I_UINT_W_OFFS.json  TNN_I.json  TNN_II.json  TNN_III.json  TNN_V_split.json
cpp/test/lib/configs/m_mode_tests/: I_OFFS_W_DIFF.json  I_UINT_W_OFFS.json
cpp/test/lib/configs/variability/: variability.json
cpp/test/lib/inc/: test_helper.h
int-bindings/: interface.py
int-bindings/test/: adc_test.py  analog_mapping_test.py  config_update_test.py  digital_mapping_test.py  interface_test.py  read_disturb_mitigation_hw_test.py  read_disturb_mitigation_sw_test.py  read_disturb_mitigation_test.py  read_disturb_model_test.py
int-bindings/test/configs/: I_DIFF_W_DIFF_1XB.json  I_DIFF_W_DIFF_2XB.json  I_TC_W_DIFF.json  I_UINT_W_DIFF.json  I_UINT_W_OFFS.json  POS_ADC_1.json  SYM_ADC_1.json  SYM_ADC_2.json  SYM_ADC_4.json
int-bindings/test/configs/analog/: BNN_I.json  BNN_II.json  BNN_III.json  BNN_IV.json  BNN_V.json  BNN_VI.json  I_DIFF_W_DIFF_1XB.json  I_DIFF_W_DIFF_2XB.json  I_OFFS_W_DIFF.json  I_TC_W_DIFF.json  I_UINT_W_DIFF.json  I_UINT_W_OFFS.json  POS_ADC_1.json  SYM_ADC_1.json  SYM_ADC_2.json  SYM_ADC_3.json  SYM_ADC_4.json
int-bindings/test/configs/digital/: BNN_I.json  BNN_II.json  BNN_V.json  I_DIFF_W_DIFF_1XB.json  I_TC_W_DIFF.json  I_UINT_W_OFFS.json
int-bindings/test/helper/: rd_model.py
scripts/: build_acs.sh  build_interfaces.bash
util/: format.py  format_cpp.py  format_py.py  requirements_style.txt
