[metadata]
name = acs_int
version = 0.1
description = Python binding for int simulator
long_description = file: README.md
long_description_content_type = text/markdown
author = Rebecca Pelke
author_email = pelke@ice.rwth-aachen.de
classifiers =
    Programming Language :: Python :: 3
install_requires =
    numpy

[options]
packages = acs_int
package_dir =
    acs_int = int-bindings
python_requires = >=3.6

[options.packages.find]
where = int-bindings
exclude =
    int-bindings/test*
